# nyc-taxi-predictions-2025

./: pyproject.toml
app/: api.py  main.py
experiments/: 01-databricks_mlflow_model_experiments.ipynb  02-databricks-HM.ipynb
mlruns/0/: meta.yaml
notebooks/: Initial_Tracking.ipynb  mlflow.db
notebooks/mlruns/1/models/m-c01eaa25cce24dc0883f4cbbaf0f439b/artifacts/: MLmodel
notebooks/mlruns/2/models/m-3003889dee1c49d798027b00e8f1673e/artifacts/: MLmodel  conda.yaml
notebooks/mlruns/2/models/m-6f71330053204169a69f8eb416a54f45/artifacts/: MLmodel  model.pkl
notebooks/mlruns/2/models/m-847116a853464bc58fc4dede6d920e25/artifacts/: MLmodel
notebooks/mlruns/2/models/m-93bf97df017b4fde92db43130fffb430/artifacts/: MLmodel
notebooks/mlruns/2/models/m-f246eac321994d2e928f9a81adf1ae31/artifacts/: MLmodel  python_env.yaml
training pipeline/: 02-train_pipeline_prefect.py  train_challenger.py
